# kuken

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  support_question.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: release.yml  server-build.yml  server-integration-tests.yml  super-linter.yml  web-build.yml  web-publish-image-docker.yml
blueprints/: Blueprint.pkl  PklProject  banto.conf  reference-v1.conf  test.conf
blueprints/blueprints/games/: config.pkl
blueprints/package/: package@1.0.0  package@1.0.0.sha256  package@1.0.0.zip.sha256
blueprints/reference/v1/: Reference.pkl
cli/: Cargo.toml  README.md
cli/src/: cli.rs  main.rs
cli/src/commands/: mod.rs
cli/src/commands/install/: mod.rs  web.rs
installer/: README.md  installer.sh
server/: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  build.gradle.kts  docker-compose.dev.yml  docker-compose.prod.yml  gradle.properties  settings.gradle.kts
server/gradle/: libs.versions.toml
server/kuken/: build.gradle.kts  docker-compose.dev.yml  local.Dockerfile  settings.gradle.kts
web/: .dockerignore  .env.example  .gitignore  .prettierrc.json  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
web/docker/: Dockerfile
web/public/: site.webmanifest
web/src/: App.vue  i18n.ts  main.ts  router.ts
(+448 files in other folders)
