[package]
name = "kuken-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "native-tls", "http2"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
dirs = "6.0.0"
console = "0.16.2"
dialoguer = "0.12.0"
indicatif = "0.18.3"
